Update title and button text with new emoji

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Per la mia Bimba ❤️</title>
+<title>Per la mia Bimba 🤍</title>
 
 <style>
 body{
@@ -83,13 +83,13 @@ button{
 
 <div id="welcome">
     <h2>Ho una cosa per te…</h2>
-    <button id="startBtn">Clicca qui ❤️</button>
+    <button id="startBtn">Clicca qui 🤍</button>
 </div>
 
 <div id="main">
     <h1>Ti amo Bimba</h1>
     <div style="font-size:2.5rem">🤍</div>
-    <p>Insieme dal 26 Maggio 2024</p>
+    <p>Ci conosciamo dal 26 Maggio 2024</p>
 
     <div class="timer">
         <div class="box"><div id="d" class="num">0</div><div class="lab">Giorni</div></div>
